--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -299,7 +299,7 @@ body {
 }
 
 .signin__hint {
-	@include icon-FontAwesome();
+	// @include icon-FontAwesome();
 	animation-duration: 1s;
 	animation-fill-mode: both;
 	animation-iteration-count: infinite;
@@ -382,7 +382,7 @@ body {
 	.signin-forgot &,
 	.signin-twostep &,
 	.signin-success & {
-		@include icon-FontAwesome();
+		// @include icon-FontAwesome();
 		background-image: none;
 		border-radius: 65px;
 		line-height: 65px;
