--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -50,6 +50,8 @@
     <script src="{{ base_path ~ 'js/main.js' }}" ></script>
     <script src="{{ base_path ~ 'dist/js/lexicon-bundle.js' }}" ></script>
 
+    <script defer src="{{ base_path ~ 'fonts/fontawesome-free-5.15.4-web/js/all.js' }}"></script>   
+
     {% block pageStyle %}{% endblock %}
 </head>
 <body class="language-html">
