--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -315,7 +315,8 @@
     &:after {
         color: color(black);
         content: '\f057';
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
         margin-right: 5px;
         visibility: visible;
 
