--- a/stylesheets/_component.calendar.scss
+++ b/stylesheets/_component.calendar.scss
@@ -72,7 +72,8 @@
     &::before {
         content: '\f0d9';
         padding: 5px;
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
     }
 }
 
@@ -82,7 +83,8 @@
     &::after {
         content: '\f0da';
         padding: 5px;
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
     }
 }
 
