--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -187,7 +187,8 @@
     &::after {
         color: color(gray, lightest);
         content: '\f061';
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
         font-size: $font-size-large;
         left: 0;
         position: absolute;
@@ -227,7 +228,8 @@
     &::after {
         color: color(gray, lightest);
         content: '\f061';
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
         font-size: 19px;
         left: 0;
         position: absolute;
@@ -404,7 +406,8 @@ td.table__form .rules + .form__group:last-of-type {
         &::after {
             color: color(gray, lightest);
             content: '\f061';
-            font-family: 'FontAwesome';
+            font-family: 'Font Awesome 5 Free';
+            font-weight: 900;
             font-size: 19px;
             left: 0;
             position: absolute;
