Maintain backwards compatibility with old icon namespaces

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -43,7 +43,8 @@
 }
 
 // Map Font Awesome 5 to FA4's pseudo elements
-[class*="icon-"] {
+[class*="icon-"],
+[class^="icon-"] {
     display: inline-block;
     font-family: 'Font Awesome 5 Free';
     font-style: normal;
