Add missing building-o remapping

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -63,6 +63,7 @@
 .icon-beaker::before                    { content: '\f0c3'; } // flask
 .icon-bell-alt::before                  { content: '\f0f3'; font-weight: 400; } // bell
 .icon-bookmark-empty::before            { content: '\f02e'; font-weight: 400; } // bookmark
+.icon-building-o::before                { content: '\f1ad'; font-weight: 400; } // building
 .icon-bitbucket::before                 { font-family: 'Font Awesome 5 Brands'; } // bitbucket
 .icon-btc::before                       { content: '\f15a'; font-family: 'Font Awesome 5 Brands'; } // btc
 .icon-calendar-empty::before            { content: '\f133'; font-weight: 400; } // calendar
