Add missing icon-bell-o icon

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -43,8 +43,7 @@
 }
 
 // Map Font Awesome 5 to FA4's pseudo elements
-[class*="icon-"],
-[class^="icon-"] {
+[class*="icon-"] {
     display: inline-block;
     font-family: 'Font Awesome 5 Free';
     font-style: normal;
@@ -62,6 +61,7 @@
 .icon-bar-chart::before                 { content: '\f080'; } // chart-bar
 .icon-beaker::before                    { content: '\f0c3'; } // flask
 .icon-bell-alt::before                  { content: '\f0f3'; font-weight: 400; } // bell
+.icon-bell-o::before                    { content: '\f0f3'; font-weight: 400; } // bell
 .icon-bookmark-empty::before            { content: '\f02e'; font-weight: 400; } // bookmark
 .icon-building-o::before                { content: '\f1ad'; font-weight: 400; } // building
 .icon-bitbucket::before                 { font-family: 'Font Awesome 5 Brands'; } // bitbucket
