Add missing .icon-sliders mapping

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -196,6 +196,7 @@
 .icon-sort-by-order-alt::before         { content: '\f886'; } // sort-numeric-down-alt
 .icon-repeat::before                    { content: '\f2f9'; } // redo-alt
 .icon-screenshot::before                { content: '\f05b'; } // crosshairs
+.icon-sliders::before                   { content: '\f1de' } // sliders-h
 .icon-stackexchange::before             { content: '\f18d'; font-family: 'Font Awesome 5 Brands'; } // stack-exchange
 .icon-star-empty::before                { content: '\f005'; font-weight: 400; } // star
 .icon-star-half-empty::before           { content: '\f5c0'; } // star-half-alt
