Add missing .minus-square-o mapping

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -150,6 +150,7 @@
 .icon-mail-reply-all::before            { content: '\f122'; } // reply-all
 .icon-microphone-off::before            { content: '\f131'; } // microphone-slash
 .icon-minus-sign::before                { content: '\f056'; } // minus-circle
+.icon-minus-square-o::before            { content: '\f146'; font-weight: 400; } // minus-square
 .icon-mobile-phone::before              { content: '\f3cd'; } // mobile-alt
 .icon-money::before                     { content: '\f3d1'; } // money-alt
 .icon-move::before                      { content: '\f0b2'; } // arrows-alt
