Add missing .icon-plus-square-o mapping

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -168,6 +168,7 @@
 .icon-play-sign::before                 { content: '\f144'; } // play-circle
 .icon-plus-sign::before                 { content: '\f055'; } // plus-circle
 .icon-plus-sign-alt::before             { content: '\f0fe'; } // plus-square
+.icon-plus-square-o::before             { content: '\f0fe'; font-weight: 400; } // plus-square
 .icon-gbp::before                       { content: '\f154'; } // pound-sign
 .icon-pushpin::before                   { content: '\f08d'; } // thumbtack
 .icon-question-sign::before             { content: '\f059'; } // question-circle
