Add missing .icon-gear mapping

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -119,6 +119,7 @@
 .icon-foursquare::before                { font-family: 'Font Awesome 5 Brands'; } // foursquare
 .icon-file-text-alt::before             { content: '\f15c'; font-weight: 400; } // file-alt
 .icon-fullscreen::before                { content: '\f31e'; } // expand-arrows-alt
+.icon-gear::before                      { content: '\f013'; } // cog
 .icon-github::before                    { font-family: 'Font Awesome 5 Brands'; } // github
 .icon-github-alt::before                { content: '\f113'; font-family: 'Font Awesome 5 Brands'; } // github
 .icon-github-sign::before               { content: '\f092'; font-weight: 400; font-family: 'Font Awesome 5 Brands'; } // github-square
