--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -10,7 +10,7 @@
         border-bottom: 1px solid rgba(0, 0, 0, .1);
         clear: none;
         font-size: $font-size-large * 1.1;
-        line-height: $font-size-large * 1.3;
+        line-height: 20px;
         margin-bottom: 0;
         padding: 12px $padding-large-horizontal;
 
@@ -85,7 +85,7 @@
 .panel__icon {
     float: left;
     font-size: $font-size-large * 1.1;
-    margin: 14px 10px 0 $padding-large-horizontal;
+    margin: 10px;
 }
 
 @each $state, $state-color, $state-color-alt in $state-colors {
