--- a/stylesheets/lexicon/lexicon.scss
+++ b/stylesheets/lexicon/lexicon.scss
@@ -53,6 +53,10 @@
         text-align: right;
     }
 
+    .ma0 {
+        margin: 0;
+    }
+
     .pa0 {
         padding: 0;
     }
@@ -86,7 +90,7 @@
     }
 
     .nb2 {
-        margin-bottom: -0.5rem;
+        margin-bottom: -.5rem;
     }
 
     .nr4 {
