Add mapping for missing icon-user-o

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -212,6 +212,7 @@
 .icon-twitter-sign::before              { content: '\f081'; font-weight: 400; font-family: 'Font Awesome 5 Brands'; } // twitter-square
 .icon-twitter::before                   { font-family: 'Font Awesome 5 Brands'; } // twitter
 .icon-upload-alt::before                { content: '\f093'; } // upload-alt
+.icon-user-o::before                    { content: '\f007'; font-weight: 400; } // user
 .icon-usd::before                       { content: '\f155'; } // dollar-sign
 .icon-warning-sign::before              { content: '\f071'; } // exclamation-triangle
 .icon-windows::before                   { font-family: 'Font Awesome 5 Brands'; } // windows
