Add missing outline icons used in XFP page designer

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -66,7 +66,9 @@
 .icon-building-o::before                { content: '\f1ad'; font-weight: 400; } // building
 .icon-bitbucket::before                 { font-family: 'Font Awesome 5 Brands'; } // bitbucket
 .icon-btc::before                       { content: '\f15a'; font-family: 'Font Awesome 5 Brands'; } // btc
+.icon-calendar-check-o::                { content: '\f274'; font-weight: 400; } // calendar-check
 .icon-calendar-empty::before            { content: '\f133'; font-weight: 400; } // calendar
+.icon-caret-square-down-o::before       { content: '\f150'; font-weight: 400; } // caret-square-down
 .icon-check-empty::before               { content: '\f0c8'; font-weight: 400; } // square
 .icon-check-sign::before                { content: '\f14a'; } // check-square
 .icon-check-minus::before               { content: '\f146'; font-weight: 400; } // minus-square
@@ -89,6 +91,7 @@
 .icon-comments-alt::before              { content: '\f086'; } // comments
 .icon-css3::before                      { font-family: 'Font Awesome 5 Brands'; } // facebook
 .icon-dashboard::before                 { content: '\f3fd'; } // tachometer-alt
+.icon-dot-circle-o::before              { content: '\f192'; font-weight: 400; } // dot-circle
 .icon-dribbble::before                  { font-family: 'Font Awesome 5 Brands'; } // dribbble
 .icon-edit-sign::before                 { content: '\f14b'; } // pen-square
 .icon-ellipsis-horizontal::before       { content: '\f141'; } // ellipsis-h
