Fix missing before condition on icon-calendar-check icon

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -66,7 +66,7 @@
 .icon-building-o::before                { content: '\f1ad'; font-weight: 400; } // building
 .icon-bitbucket::before                 { font-family: 'Font Awesome 5 Brands'; } // bitbucket
 .icon-btc::before                       { content: '\f15a'; font-family: 'Font Awesome 5 Brands'; } // btc
-.icon-calendar-check-o::                { content: '\f274'; font-weight: 400; } // calendar-check
+.icon-calendar-check-o::before          { content: '\f274'; font-weight: 400; } // calendar-check
 .icon-calendar-empty::before            { content: '\f133'; font-weight: 400; } // calendar
 .icon-caret-square-down-o::before       { content: '\f150'; font-weight: 400; } // caret-square-down
 .icon-check-empty::before               { content: '\f0c8'; font-weight: 400; } // square
