Update panel documentation

--- a/views/lexicon/tabs/panels.html.twig
+++ b/views/lexicon/tabs/panels.html.twig
@@ -107,7 +107,6 @@
                     'class': 'btn--outline btn--small btn--inverse'
                 }
             ]
-
         })
     }}
 
@@ -164,7 +163,9 @@
                 },
                 {
                     'label': 'Do The Thing',
-                    'class': 'btn--outline btn--small btn--inverse'
+                    'class': 'btn--outline btn--small btn--inverse',
+                    'type': 'link',
+                    'href': '/path/to/action'
                 }
             ]
 
