Fix issue where 'more' menu uses Font Awesome for label text

--- a/stylesheets/_component.nav-primary.scss
+++ b/stylesheets/_component.nav-primary.scss
@@ -12,7 +12,7 @@
   }
 
   .nav-item {
-    // max-width: $nav-primary-item-width;
+    font-family: $font-family-light;
 
     @include respond-max($screen-tablet-max) {
       font-size: $font-size-medium;
